blog-postgres-statefulset.yml
#blog-postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blog-postgres
spec:
  serviceName: blog-postgres
  replicas: 1
  selector:
    matchLabels:
      app: blog-postgres
  template:
    metadata:
      labels:
        app: blog-postgres
    spec:
      containers:
        - name: db
          image: postgres:14.2-alpine
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
